--- a/web/index.html
+++ b/web/index.html
@@ -130,11 +130,11 @@
             </ul>
             <h2 style="margin-top: 5%;"><span>Made by</span></h2>
             <ul class="list-inline list-social">
-                <li class="list-inline-item social-twitter"><img class="rounded-circle" src="http://www.gravatar.com/avatar/7386f631d26a9fde6ec1571f899f2465?s=100"></li>
-                <li class="list-inline-item social-twitter"><img class="rounded-circle" src="https://www.gravatar.com/avatar/18a27f3ba520c4fdb0a1f4b0bac4f846?s=100"></li>
-                <li class="list-inline-item social-twitter"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
-                <li class="list-inline-item social-twitter"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
-                <li class="list-inline-item social-twitter"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
+                <li class="list-inline-item"><img class="rounded-circle" src="http://www.gravatar.com/avatar/7386f631d26a9fde6ec1571f899f2465?s=100"></li>
+                <li class="list-inline-item"><img class="rounded-circle" src="https://www.gravatar.com/avatar/18a27f3ba520c4fdb0a1f4b0bac4f846?s=100"></li>
+                <li class="list-inline-item"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
+                <li class="list-inline-item"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
+                <li class="list-inline-item"><img class="rounded-circle" src="https://www.gravatar.com/avatar/205e460b479e2e5b48aec07710c08d50?s=100"></li>
             </ul>
         </div>
     </section>
